# aieducreator-aiagent2

./: .env.sample  .gitignore  CLAUDE.md  LICENSE  OPS.md  README.md  create_database_openapi.py  data_analysis_server.py  main.py  migrate_sqlite_to_duckdb.py  pyproject.toml  requirements.txt
agent/: config.py  graph.py  nodes.py  parsers.py
agent/tests/: test_config.py  test_data_analysis_server.py  test_graph.py  test_nodes.py  test_parsers.py
servers/: data_analysis_server.py  market_research_server.py  report_writing_server.py  seoul_metro_train_server.py
